# translingo

./: Cargo.toml  main.ipynb  main.py  test.txt
src/: config.rs  data.json  error.rs  language.rs  lib.rs  main.rs  model.rs  translation_cache.rs  translator.rs  utils.rs
