[package]
name = "translatify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.9.0"
regex = "1.7.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
structopt = "0.3.26"
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
